# rustynuc

./: .gitignore  .travis.yml  404.html  Cargo.toml  NOTES.md  README.md  config.toml  index.html  justfile  robots.txt  sitemap.xml
.github/workflows/: cd.yml  ci.yml  gh-pages.yml
benches/: benchmark.rs
oxo/: Cargo.toml
oxo/src/: alignment.rs  error.rs  kmer.rs  lib.rs  motif_counts.rs  reference.rs
src/: alignment.rs  cli.rs  error.rs  genomic.rs  main.rs  vcf.rs
tests/: tests.rs
tests/input/: normal.bam  oxog.bam
tests/input/high_af/: high_af.oxog.bam
