[package]
name = "rustynuc"
version = "0.1.0"
authors = ["Johnny Debebe johnny.debebe@nottingham.ac.uk"]
edition = "2018"
publish = false

[dependencies]
niffler = "2.1.0"
structopt = "0.3.14"
bio = "0.30.1"
rust-htslib = "0.31.0"
thiserror = "1.0.20"
fishers_exact = "1.0.1"
log = "0.4.8"
env_logger = "0.7.1"
rayon = "1.3.1"

[dev-dependencies]
predicates = "1.0.4"
assert_cmd = "1.0.1"
walkdir = "2.3.1"
