[package]
name = "rustynuc"
version = "0.3.0"
authors = ["Johnny Debebe johnny.debebe@nottingham.ac.uk"]
edition = "2018"
description = "Quick analysis of pileups for likely 8-oxoG locations"
keywords = ["bioinformatics", "pileup", "OxoG", "8-oxoG", "bio"]
categories = ["command-line-utilities"]
license = "MIT"
repository = "https://github.com/bjohnnyd/rustynuc"
readme = "README.md"
exclude = ["static/*", "justfile", ".github/*", ".git/*", "sass/*", "public/*", "content/*", "templates/*", "themes/*"]

[dependencies.niffler]
version = "2.2.0"
default-features = false 
features = ["gz"]

[dependencies.rust-htslib]
version = "0.31.0"
default-features = false 

[dependencies.env_logger]
version = "0.7.1"
default-features = false 

[dependencies]
structopt = "0.3.14"
bio = "0.30.1"
thiserror = "1.0.20"
fishers_exact = "1.0.1"
log = "0.4.8"
rayon = "1.3.1"

[dev-dependencies]
predicates = "1.0.4"
assert_cmd = "1.0.1"
walkdir = "2.3.1"
criterion = "0.3.3"
regex = "1.4.2"
lazy_static = "*"

[[bench]]
name = "benchmark"
harness = false

