[package]
name = "oxo"
version = "0.1.0"
authors = ["Johnny Debebe <28043284+bjohnnyd@users.noreply.github.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "0.30.1"
rust-htslib = "0.30.0"
thiserror = "1.0.20"

[dev-dependencies]
walkdir = "2.3.1"
predicates = "1.0.4"
niffler = "2.1.0"
